--- a/JSON & RESTful API/jade.jade
+++ b/JSON & RESTful API/jade.jade
@@ -1,4 +1,5 @@
 doctype html
+html
     head
         title
     body
@@ -6,5 +7,5 @@ doctype html
         // - comments
         .class xxxxxx
 
-// -Created by xray on 11/3/2016.
+//-Created by xray on 11/3/2016.
 
